Bug 1123090 - Pass URLs loaded during CreateWindow to content process (r=bent)